# CMakeRefresh

./: CMakeLists.txt
app/: main.cpp
include/: my_lib.hpp
src/: CMakeLists.txt  my_lib.cpp
